Made it look pretty
New links, gotta get some pics in though oof

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Adria Yi</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Adria Yi</h2>
-							<p>A (non-professional) portfolio showcasing some pieces of my writing as well as video projects.</a></p>
+							<p>A (non-professional) website showcasing the required links of my works/interests.</a></p>
 						</div>
 					</section>
 
@@ -57,10 +57,11 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Poetry</h2>
-										<p>Poetry is an expression of the soul, blah blah blah- poetry is whatever you want it to be baby. You want to write a haiku about sharks? Go for it. The sky's the limit. </p>
-										<a href="#" class="special">Learn more</a>
-									</div>
+										<h2 class="major">Blogposts</h2>
+										<p>Two blogposts I've published onto Medium</p>
+										<a href="https://medium.com/@levjipps/the-gaming-communitys-cutest-and-bloodiest-friendship-9f3d3b3ef08b" class="special">A Bloody Friendship</a>
+                    	<a href="https://medium.com/@levjipps/breaking-down-coppa-the-confusing-policy-endangering-youtubes-independent-creators-ea1e36479a35" class="special">Breaking Down Coppa</a>
+                  </div>
 								</div>
 							</section>
 
@@ -69,9 +70,9 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Short Stories</h2>
-										<p>I was going to put in some of my Naruto fanfiction here but I've chosen to spare you. You're welcome.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Podcast</h2>
+										<p>A podcast that I regularly listen to, and some background noise to fill up your quiet quarantine days</p>
+										<a href="https://podcasts.apple.com/us/podcast/the-misfits-podcast/id1399485424" class="special">The Misfits</a>
 									</div>
 								</div>
 							</section>
@@ -82,8 +83,8 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Video</h2>
-										<p>A slapdash, throw-it-in-a-bowl-and-forget-about-it kinda video. Learn how to make traditional Japchae and wow your family!</p>
-										<a href="#" class="special">Learn more</a>
+										<p>A slapdash, throw-it-in-a-bowl-and-forget-about-it kinda video. Learn how to make traditional Korean food and wow your family!</p>
+										<a href="https://youtu.be/G1CDo4fZ8Ow" class="special">Making Japchae</a>
 									</div>
 								</div>
 							</section>
@@ -91,15 +92,15 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Taking advantage through the power of gaming</h2>
+									<p>Minecraft had launched an education edition for teachers who are currently looking for a new, fresh way to showcase their curriculum. Especially during the COVID-19 pandemic, more have turned to this medium to engage their students in a new, exciting way.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
+											<h3 class="major">Minecraft Education Edition</h3>
+											<p>Stimulate and teach, with blocks!</p>
+											<a href="https://education.minecraft.net/class-resources/lessons/" class="special">Learn more</a>
+										</article>></a>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Nisl placerat</h3>
