--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/minecraft-castle.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Blogposts</h2>
 										<p>Two blogposts I've published onto Medium</p>
@@ -68,7 +68,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/podcast-orange.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Podcast</h2>
 										<p>A podcast that I regularly listen to, and some background noise to fill up your quiet quarantine days</p>
