--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Adria Yi</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
+
 					</header>
 
 				<!-- Menu -->
@@ -43,7 +41,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<i class="fas fa-headset"></i>
+              <i class="fas fa-pencil-alt"></i>
+              <i class="fas fa-school"></i>
 							<h2>Adria Yi</h2>
 							<p>A (non-professional) website showcasing the required links of my works/interests.</a></p>
 						</div>
@@ -58,7 +58,7 @@
 									<a href="#" class="image"><img src="images/minecraft-castle.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Blogposts</h2>
-										<p>Two blogposts I've published onto Medium</p>
+										<p>Two blogposts I've published onto Medium- The first describing the relationship between two unlikely gaming communities, and the second, breaking down the YouTube COPPA regulations. </p>
 										<a href="https://medium.com/@levjipps/the-gaming-communitys-cutest-and-bloodiest-friendship-9f3d3b3ef08b" class="special">A Bloody Friendship</a>
                     	<a href="https://medium.com/@levjipps/breaking-down-coppa-the-confusing-policy-endangering-youtubes-independent-creators-ea1e36479a35" class="special">Breaking Down Coppa</a>
                   </div>
@@ -68,10 +68,10 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/podcast-orange.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/podcast-mic.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Podcast</h2>
-										<p>A podcast that I regularly listen to, and some background noise to fill up your quiet quarantine days</p>
+										<p>A podcast that I regularly listen to. (Could be played as background noise to fill up your quiet quarantine days)</p>
 										<a href="https://podcasts.apple.com/us/podcast/the-misfits-podcast/id1399485424" class="special">The Misfits</a>
 									</div>
 								</div>
@@ -80,7 +80,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/noodlio.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Video</h2>
 										<p>A slapdash, throw-it-in-a-bowl-and-forget-about-it kinda video. Learn how to make traditional Korean food and wow your family!</p>
@@ -96,79 +96,19 @@
 									<p>Minecraft had launched an education edition for teachers who are currently looking for a new, fresh way to showcase their curriculum. Especially during the COVID-19 pandemic, more have turned to this medium to engage their students in a new, exciting way.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/minecraft-classroom.jpg" alt="" /></a>
 											<h3 class="major">Minecraft Education Edition</h3>
-											<p>Stimulate and teach, with blocks!</p>
+											<p>Stimulate and teach, with the power of blocks!</p>
 											<a href="https://education.minecraft.net/class-resources/lessons/" class="special">Learn more</a>
 										</article>></a>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+
+
 								</div>
 							</section>
 
 					</section>
 
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Blank Name Inc<br />
-									1234 Sparkling Water #2894<br />
-									Coolville, AK 12345-1234
-								</li>
-								<li class="icon solid fa-phone">(123) 456-7890</li>
-								<li class="icon solid fa-envelope"><a href="#">levjipps@vt.edu</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/Ludens25320057</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/hopefully_bugs</a></li>
-                <li class="icon brands fa-twitch"><a href="#">twitch.tv/saintcalico</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
+
 
 			</div>
 
