--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 									<a href="#" class="image"><img src="images/podcast-mic.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Podcast</h2>
-										<p>A podcast that I regularly listen to. (Could be played as background noise to fill up your quiet quarantine days)</p>
-										<a href="https://podcasts.apple.com/us/podcast/the-misfits-podcast/id1399485424" class="special">The Misfits</a>
+										<p>A criticism and debate of America's (and the world's) response towards COVID-19.</p>
+										<a href="https://soundcloud.com/casey-haney-574654554/a-comedy-of-errors-what-covid-19-has-revealed-about-the-us-and-its-people/s-hHy3AhqVWkk" class="special">Coronavirus Podcast</a>
 									</div>
 								</div>
 							</section>
