--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<div class="content">
 										<h2 class="major">Podcast</h2>
 										<p>A criticism and debate of America's (and the world's) response towards COVID-19.</p>
-										<a href="https://soundcloud.com/casey-haney-574654554/a-comedy-of-errors-what-covid-19-has-revealed-about-the-us-and-its-people/s-hHy3AhqVWkk" class="special">Coronavirus Podcast</a>
+										<a href="https://soundcloud.com/casey-haney-574654554/a-comedy-of-errors-what-covid-19-has-revealed-about-the-us-and-its-people/s-hHy3AhqVWkk" class="special">A Comedy of Errors</a>
 									</div>
 								</div>
 							</section>
